--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - clean/2048.yaml
+  - namespace.yaml
+  - main.yaml
